Tiny bug in z-index of panel disablers

--- a/static/css/codecompetitions.less
+++ b/static/css/codecompetitions.less
@@ -109,7 +109,7 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
-	z-index: 9999;
+	z-index: 1999;
 	cursor: not-allowed;
 
 	&.disable-if-test {
